# receipt-freee

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: config.rs  freee.rs  gemini.rs  lib.rs  main.rs  oauth_server.rs
src/components/: SearchableSelect.tsx
