[package]
name = "receipt-freee"
version = "0.1.0"
description = "レシート管理アプリ - AI解析でfreee会計に経費登録"
authors = ["you"]
edition = "2021"

[lib]
name = "receipt_freee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
anyhow = "1"
urlencoding = "2"
